|   *Updated:* | /{{{modification-time(%Y-%m-%d %H:%M:%S)}}}/ |
| *Generated:* | /{{{time(%Y-%m-%d %H:%M:%S)}}}/              |
#+ATTR_HTML: :align center
Copyright \copy {{{time(%Y)}}} Mitch Richling. All rights reserved.

#+TOC: headlines 5

* Changes On HEAD Since Last Release
:PROPERTIES:
:CUSTOM_ID: latest
:END:
  - Fixed Bugs
    - N/A
  - Known Issues
    - N/A
  - API breaking Changes
    - mjr::ramCanvasTpl::readTIFFfile now has new exit codes (23 & 24 -- see below).  
  - Deprecated functionality
    - N/A
  - New functionality
    - MSVC:
      - With the switch to GTest, the unit tests are simple to run against MSVC.
      - Removed "experimental" warning when configuring with MSVC.
      - Added hints for using MSVC
      - Updated wMean tests to avoid integer cases on cast.
    - mjr::ramCanvasTpl::readTIFFfile: Added error 23: Image is tiled.
    - mjr::ramCanvasTpl::readTIFFfile: Added error 24: Image has a palette.
    - New method colorTpl::channelArithFlt2clrChan
    - Added warning to wMean method regarding the vulgarities of floating point arithmetic and casts
    - Added more compilers to CMakeLists.txt
      - NVHPC
      - IntelLLVM
  - Documentation
    - Added test coverage document
  - Examples
    - New
      - N/A
    - Updated
      - N/A
  - Miscellaneous
    - Broke utest_colorTpl.cpp up into different files
    - Added IncludeMRMathCPPLib.cmake code
    - Updated version of configure.sh
    - Updated mrw2any.sh & 

* 22.0.0.0: Feature & Refactor Release
:PROPERTIES:
:CUSTOM_ID: v22.0.0.0
:END:
  - Fixed Bugs
    - mjr::colorTpl::tfrmMod Added divide by zero check for floating point channels
    - mjr::colorTpl::tfrmDiv Better divide by zero check for floating point channels
    - mjr::colorTpl::tfrmAddDivClamp Better divide by zero check for floating point channels
    - mjr::colorTpl::tfrmLn1 Added non-positive log check for floating point images
    - mjr::colorTpl::tfrmLn Added non-positive log check
  - Known Issues
    - N/A